--- a/index.html
+++ b/index.html
@@ -68,19 +68,20 @@
   </section>
 
   <section class="section">
-    <h2>Printed Products</h2>
-    <div class="projects">
-      <div class="project-card">
-        <img src="https://i.etsystatic.com/6245717/r/il/57de8d/6553549006/il_794xN.6553549006_eu6d.jpg" alt="Dream Big Mama Planner">
-        <h3>Dream Big Mama Planner</h3>
-        <a href="https://www.etsy.com/listing/4328195550/dream-big-mama-nurture-grow-planner" target="_blank">View on Etsy</a>
-        <a href="https://a.co/d/0Ig0vXb" target="_blank">View on Amazon</a>
-      </div>
+  <h2>Printed Products</h2>
+  <div class="projects">
+    <div class="project-card">
+      <img src="IMG_9247.jpg" alt="Dream Big Mama Planner Cover">
+      <h3>Dream Big Mama Planner</h3>
+      <a href="https://www.etsy.com/listing/4328195550/dream-big-mama-nurture-grow-planner" target="_blank">View on Etsy</a>
+      <a href="https://a.co/d/0Ig0vXb" target="_blank">View on Amazon</a>
     </div>
-  </section>
+  </div>
+</section>
 
   <footer>
     © 2025 Jazmin Lesure. All rights reserved.
   </footer>
 </body>
 </html>
+
