--- a/index.html
+++ b/index.html
@@ -40,44 +40,64 @@
         <h3>Cover With Love</h3>
         <a href="https://www.coverwithlove.org" target="_blank">View Website</a>
       </div>
+      <div class="project-card">
+        <img src="kewan-site.png" alt="Keijo Martial Arts">
+        <h3>Keijo Martial Arts Academy</h3>
+        <a href="https://www.keijomartialartsacademy.com/" target="_blank">View Website</a>
+      </div>
     </div>
   </section>
 
   <section class="section">
-    <h2>Logos</h2>
+    <h2>Instagram</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="IMG_1585 3.png" alt="Elevated By Joy Logo">
-        <h3>Elevated By Joy</h3>
+        <img src="ig-elevated.png" alt="Elevated by Joy Instagram">
+        <h3>@elevatedbyjoy_</h3>
+        <a href="https://www.instagram.com/elevatedbyjoy_/" target="_blank">View on Instagram</a>
+      </div>
+      <div class="project-card">
+        <img src="ig-planandthrive.png" alt="Plan and Thrive Instagram">
+        <h3>@planandthrive.co</h3>
+        <a href="https://www.instagram.com/planandthrive.co" target="_blank">View on Instagram</a>
       </div>
     </div>
   </section>
 
   <section class="section">
-    <h2>Business Flyers</h2>
+    <h2>Printed Products</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="mary kay fall flyer.png" alt="Mary Kay Flyer">
-        <h3>Mary Kay Fall Sale</h3>
+        <img src="IMG_9247.jpg" alt="Dream Big Mama Planner">
+        <h3>Dream Big Mama Planner</h3>
+        <a href="https://www.etsy.com/listing/4328195550/dream-big-mama-nurture-grow-planner" target="_blank">View on Etsy</a>
+        <a href="https://a.co/d/0Ig0vXb" target="_blank">View on Amazon</a>
       </div>
       <div class="project-card">
-        <img src="NEW FLYER.png" alt="Community Barbecue">
-        <h3>Community Barbecue</h3>
+        <img src="reset-rise.jpg" alt="Reset & Rise Planner">
+        <h3>Own Your Own Time: The Reset & Rise Planner</h3>
+        <a href="https://www.etsy.com/listing/4342096943/own-your-own-time-the-reset-rise-planner" target="_blank">View on Etsy</a>
+        <a href="https://a.co/d/hQEqj29" target="_blank">View on Amazon</a>
+      </div>
+      <div class="project-card">
+        <img src="balance-blueprint.jpg" alt="Balance Blueprint for Moms">
+        <h3>Balance Blueprint for Moms</h3>
+        <a href="https://www.etsy.com/listing/4342096463/balance-blueprint-for-moms-planner" target="_blank">View on Etsy</a>
+        <a href="https://a.co/d/cgqpnDr" target="_blank">View on Amazon</a>
       </div>
     </div>
   </section>
 
   <section class="section">
-  <h2>Printed Products</h2>
-  <div class="projects">
-    <div class="project-card">
-      <img src="IMG_9247.jpg" alt="Dream Big Mama Planner Cover">
-      <h3>Dream Big Mama Planner</h3>
-      <a href="https://www.etsy.com/listing/4328195550/dream-big-mama-nurture-grow-planner" target="_blank">View on Etsy</a>
-      <a href="https://a.co/d/0Ig0vXb" target="_blank">View on Amazon</a>
+    <h2>YouTube Channel</h2>
+    <div class="projects">
+      <div class="project-card">
+        <img src="youtube-cover.jpg" alt="Life of Jazmin">
+        <h3>@lifeofjazmin</h3>
+        <a href="https://youtube.com/@lifeofjazmin?si=ct0ldrBbAjV5SUAR" target="_blank">Watch Channel</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <footer>
     © 2025 Jazmin Lesure. All rights reserved.
