--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="https://www.coverwithlove.org" target="_blank">View Website</a>
       </div>
       <div class="project-card">
-        <img src="kewan-site.png" alt="Keijo Martial Arts">
+        <img src="kewan-site.jpg" alt="Keijo Martial Arts">
         <h3>Keijo Martial Arts Academy</h3>
         <a href="https://www.keijomartialartsacademy.com/" target="_blank">View Website</a>
       </div>
@@ -74,13 +74,13 @@
         <a href="https://a.co/d/0Ig0vXb" target="_blank">View on Amazon</a>
       </div>
       <div class="project-card">
-        <img src="reset-rise.jpg" alt="Reset & Rise Planner">
+        <img src="reset-rise-cover.jpg" alt="Reset & Rise Planner">
         <h3>Own Your Own Time: The Reset & Rise Planner</h3>
         <a href="https://www.etsy.com/listing/4342096943/own-your-own-time-the-reset-rise-planner" target="_blank">View on Etsy</a>
         <a href="https://a.co/d/hQEqj29" target="_blank">View on Amazon</a>
       </div>
       <div class="project-card">
-        <img src="balance-blueprint.jpg" alt="Balance Blueprint for Moms">
+        <img src="balance-blueprint-cover.jpg" alt="Balance Blueprint for Moms">
         <h3>Balance Blueprint for Moms</h3>
         <a href="https://www.etsy.com/listing/4342096463/balance-blueprint-for-moms-planner" target="_blank">View on Etsy</a>
         <a href="https://a.co/d/cgqpnDr" target="_blank">View on Amazon</a>
@@ -92,7 +92,7 @@
     <h2>YouTube Channel</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="youtube-cover.jpg" alt="Life of Jazmin">
+        <img src="youtube-channel-cover.jpg" alt="Life of Jazmin">
         <h3>@lifeofjazmin</h3>
         <a href="https://youtube.com/@lifeofjazmin?si=ct0ldrBbAjV5SUAR" target="_blank">Watch Channel</a>
       </div>
@@ -104,4 +104,5 @@
   </footer>
 </body>
 </html>
+
 
