--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://www.elevatedbyjoy.com" target="_blank">View Website</a>
       </div>
       <div class="project-card">
-        <img src="NEW FLYER.png" alt="Cover With Love">
+        <img src="cover.jpeg" alt="Cover With Love">
         <h3>Cover With Love</h3>
         <a href="https://www.coverwithlove.org" target="_blank">View Website</a>
       </div>
@@ -52,12 +52,12 @@
     <h2>Instagram</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="IMG_1585 2.png" alt="Elevated by Joy Instagram">
+        <img src="elevated.jpeg" alt="Elevated by Joy Instagram">
         <h3>@elevatedbyjoy_</h3>
         <a href="https://www.instagram.com/elevatedbyjoy_/" target="_blank">View on Instagram</a>
       </div>
       <div class="project-card">
-        <img src="planner logo.png" alt="Plan and Thrive Instagram">
+        <img src="plan.jpeg" alt="Plan and Thrive Instagram">
         <h3>@planandthrive.co</h3>
         <a href="https://www.instagram.com/planandthrive.co" target="_blank">View on Instagram</a>
       </div>
@@ -74,13 +74,13 @@
         <a href="https://a.co/d/0Ig0vXb" target="_blank">View on Amazon</a>
       </div>
       <div class="project-card">
-        <img src="Rise.jpg" alt="Reset & Rise Planner">
+        <img src="Rise.jpeg" alt="Reset & Rise Planner">
         <h3>Own Your Own Time: The Reset & Rise Planner</h3>
         <a href="https://www.etsy.com/listing/4342096943/own-your-own-time-the-reset-rise-planner" target="_blank">View on Etsy</a>
         <a href="https://a.co/d/hQEqj29" target="_blank">View on Amazon</a>
       </div>
       <div class="project-card">
-        <img src="Balance.jpg" alt="Balance Blueprint for Moms">
+        <img src="Balance.jpeg" alt="Balance Blueprint for Moms">
         <h3>Balance Blueprint for Moms</h3>
         <a href="https://www.etsy.com/listing/4342096463/balance-blueprint-for-moms-planner" target="_blank">View on Etsy</a>
         <a href="https://a.co/d/cgqpnDr" target="_blank">View on Amazon</a>
@@ -92,7 +92,7 @@
     <h2>YouTube Channel</h2>
     <div class="projects">
       <div class="project-card">
-        <img src="you.jpg" alt="Life of Jazmin">
+        <img src="you.jpeg" alt="Life of Jazmin">
         <h3>@lifeofjazmin</h3>
         <a href="https://youtube.com/@lifeofjazmin?si=ct0ldrBbAjV5SUAR" target="_blank">Watch Channel</a>
       </div>
