--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://www.elevatedbyjoy.com" target="_blank">View Website</a>
       </div>
       <div class="project-card">
-        <img src="cover.jpg" alt="Cover With Love">
+        <img src="cover.jpeg" alt="Cover With Love">
         <h3>Cover With Love</h3>
         <a href="https://www.coverwithlove.org" target="_blank">View Website</a>
       </div>
